# ProjetTutore

./: CMakeLists.txt  README.md  main.tex
code/: KGB.cc  config.h.in  game.cc
code/local/: BabyHero.cc  BabyHero.h  BackgroundMusic.cc  BackgroundMusic.h  Bonus.cc  Bonus.h  DataType.h  Debug.cc  Debug.h  Dialogs.cc  Dialogs.h  Dynamics.h  Enemy.cc  Enemy.h  Entry.cc  Entry.h  Graphics.h  Item.c  Item.h  KEntity.h  Map.cc  Map.h  Messages.h  Music.cc  Music.h  Object.cc  Object.h  Objects.cc  Objects.h  Physics.cc  Physics.h  ResourceManager.cc  ResourceManager.h  Singletons.cc  Singletons.h  Square.cc  Square.h  b2dContactListener.cc  b2dContactListener.h
data/KGB/map/: garderie.tmx  roguelikeSheet.tsx  tileSet.tsx
data/KGB/map/ressources/: medieval_tilesheet.tsx  modern.tsx
data/KGB/map/ressources/kenney_medievalrtspack/Tilesheet/: medieval_tilesheet.tsx
data/map/: map.tmx
include/Box2D/Common/: b2Math.h
